--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.androidassignments">
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -9,7 +10,8 @@
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,14 +22,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAssignments"
         tools:targetApi="31">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="MainActivity"
+        />
+        <activity
+            android:name=".ChatWindow"
+            android:exported="false"
+            android:parentActivityName=".LoginActivity"
+            />
         <activity
             android:name=".ListItemsActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            ></activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,9 +47,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"
+            android:parentActivityName=".LoginActivity"></activity>
     </application>
 
 </manifest>
